--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "shimmer-server",
   "version": "1.0.0",
-  "description": "Gifting template renderer",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "fluent-ffmpeg": "^2.1.2",
-    "body-parser": "^1.20.2"
+    "fluent-ffmpeg": "^2.1.3",
+    "@aws-sdk/client-s3": "^3.383.0",
+    "@aws-sdk/lib-storage": "^3.383.0"
   }
 }
