--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "postinstall": "chmod +x ./bin/ffmpeg"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.3",
-    "@aws-sdk/client-s3": "^3.383.0",
-    "@aws-sdk/lib-storage": "^3.383.0"
+    "axios": "^1.7.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
