--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "postinstall": "chmod +x ./bin/ffmpeg"
+    "postinstall": "node scripts/postinstall.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "fluent-ffmpeg": "^2.1.3",
-    "axios": "^1.7.6"
+    "fluent-ffmpeg": "^2.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
