--- a/render.yaml
+++ b/render.yaml
@@ -2,16 +2,5 @@ services:
   - type: web
     name: shimmer-server
     env: node
-    plan: free
-    region: oregon
-    buildCommand: npm install
+    buildCommand: chmod +x bin/ffmpeg && npm install
     startCommand: node server.js
-    envVars:
-      - key: PORT
-        value: "10000"
-      - key: SERVICE_URL
-        value: "https://your-render-service-url.onrender.com"
-    mounts:
-      - type: volume
-        name: videos
-        path: /opt/render/project/src/public/videos
