--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.956.0",
     "express": "^4.22.1",
     "fluent-ffmpeg": "^2.1.3"
   }
